--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,32 @@
 language: php
 
 php:
-  - 7.1
-  - 7.2
-  - 7.3
-  - 7.4
+  - 8.0
+  - 8.1
+  - 8.2
+  - 8.3
   - nightly
 
 services:
   - redis-server
 
 sudo: false
-dist: trusty
+dist: jammy
 
 matrix:
-  allow_failures:
-    - php: nightly
+  include:
+    - php: 7.1
+      dist: trusty
+    - php: 7.2
+      dist: xenial
+    - php: 7.3
+      dist: bionic
+    - php: 7.4
+      dist: focal
 
 before_script:
   - sh -c "if [ $TRAVIS_PHP_VERSION != 'hhvm' ]; then phpenv config-add ./tests/travis/php.ini; fi"
-  - composer update
 
 script:
-  - $TRAVIS_BUILD_DIR/vendor/phpunit/phpunit/phpunit
+  - composer install
+  - vendor/bin/phpunit
