--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,6 @@ dist: jammy
 
 matrix:
   include:
-    - php: 7.1
-      dist: trusty
     - php: 7.2
       dist: xenial
     - php: 7.3
@@ -26,7 +24,7 @@ matrix:
 
 before_script:
   - sh -c "if [ $TRAVIS_PHP_VERSION != 'hhvm' ]; then phpenv config-add ./tests/travis/php.ini; fi"
+  - composer update
 
 script:
-  - composer install
   - vendor/bin/phpunit
